--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.10",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.2"
   },
   "devDependencies": {
     "@types/react-dom": "^19.1.2",
